--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ $gray-900: #212529 !default;
 $black:    #000 !default;
 
 $primary:       #f5992c;
-$secondary:     #cc1433;
+$secondary:     #ff0c30;
 $info:          $gray-500;
 
 $blue:    #007bff !default;
@@ -53,5 +53,14 @@ $navbar-light-toggler-icon-bg:      str-replace(url("data:image/svg+xml;charset=
 $navbar-light-toggler-border-color: rgba($black, 0);
 
 $navbar-nav-link-padding-x:         0.8em;
+
+$body-bg:                   $gray-100;
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1200px
+);
 
 @import "../node_modules/bootstrap/scss/bootstrap";
